# expresso

./: .eslintrc.js  .gitignore  MOP.md  README.md  TODO1.md  TODO2.md  TODO3.md  asconfig.json  build.sh  bun.lockb  compilation-stats.json  expresso.code-workspace  index.html  karma.conf.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vue.config.js
cpp/: Attribute.cpp  Attribute.h  CMakeLists.txt  Organism.h  README.md  WasmModule.cpp  WasmModule.js  WasmModule.wasm  build.sh
cpp/src/: Attribute.cpp  Attribute.h  Car.h  Code.h  Driver.h  EmbindUtil.h  EvalContext.cpp  EvalContext.h  EvalOutput.h  FakeBook.h  Function.cpp  Function.h  FunctionArgumentCollection.cpp  FunctionArgumentCollection.h  FunctionParameter.cpp  FunctionParameter.h  FunctionParameterCollection.cpp  FunctionParameterCollection.h  Node-bak.h  Node.cpp  Node.h  NodeParent.cpp  NodeParent.h  Organism.h  PrimitiveFunction.cpp  PrimitiveFunction.h  PrimitiveFunctionCallNode.cpp  PrimitiveFunctionCallNode.h  PrimitiveFunctionCollection.cpp  PrimitiveFunctionCollection.h  Project.cpp  Project.h  Signal.cpp  Signal.h  Value.h  WasmModule.cpp  WasmModule.h  main.cpp  variant.h
dev/: build.sh
docker-images/effect-telemetry/: README.md
go/: README.md  go.mod  go.sum
go/app/: app.go
go/ast/: abs_node.go  ast_test.go  eval_context.go  eval_output.go  expr.go  external_attribute.go  external_attribute_reference_node.go  frog.go  function.go  function_call_node.go  intrinsic_attribute.go  node.go  node_base.go  organism.go  parameter.go  polymorph_registry.go  primitive_function.go  primitive_function_call_node.go  signal.go  signal_test.go  simple_test.go
go/common/: id.go  misc.go
go/gist/: gist.go  (+1 more)
js/: .eslintrc.js  .gitignore  CMakeLists.txt  README.md  SALVAGE-README.md  build.sh  expressionista-save.json  package-lock.json  package.json  vue.config.js
notes/: COMBOBOX.txt  DEBUG-EVAL.txt  EXPAND-INSTANCE-PATH.txt  FOCUS.txt  FOCUS2.txt  IMPLEMENTATION.txt  NOTES.md  PROCESS.txt
public/: index.html  mymodule.wasm
src/: App.svelte  App.tsx  App.vue  AppState.ts  AppStateCtx.ts  AttributeView.svelte  CHATGPT.txt  CloneInstance.ts  ComponentSelect.svelte  DOMAIN-INPUT.txt  DOMAIN-INPUT2.txt  DOMAIN.txt  DRAFT.txt  DebugOverlay.svelte  DecTest.ts  Dehydrator.ts  DexData.ts  DexDomain.ts  DexFocus.ts  DexGetter.ts  DexId.ts  DexNode.ts  DexObject.svelte  DexObject.test.ts  DexReducer.ts  DexRelation.ts  DexRuntime.ts  DexRuntimeInit.ts  DexUtils.ts  Domain.ts  EVAL-AI.txt  EVAL-INSTANCE-PATH.txt  EVAL.md  EVAL.txt  EX-FUNC.txt  EffectUtils.ts  ExObject.ts  ExObjectButton.svelte  ExObjectFactory.ts  ExObjectHeaderView.svelte  (+55 more)
(+726 files in other folders)
